tests/error/modifier_errors/higher_order_power_controllable_missing_control.err
Error: Unitary flag mismatch (at $FILE:17:24)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_power_control(power_only, q)
   |                         ^^^^^^^^^^ Expected function with unitary flags: `control=True and
   |                                    power=True`, got: `power=True`

Guppy compilation failed due to 1 previous error
